{{$NEXT}}

0.2.2  2014-07-15 15:02:56 CEST
    - simplify option 'fh' with IO::Handle::Util

0.2.1  2014-07-11 10:14:33 CEST
    - implemented condense and unbuffered writing 

0.2.0   2014-07-10
    - inital release, based on Catmandu::Exporter::Table 0.1.2