@@ -54,7 +54,7 @@
          "web" : "https://github.com/nichtich/Text-MarkdownTable"
       }
    },
-   "version" : "0.2.2",
+   "version" : "0.2.3",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
